// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DnList Tests should render correctly with custom props 1`] = `
<ol
  class="list dummy-list-classname"
>
  <li
    class="dummy-list-item-classname"
  >
    List item 1
  </li>
  <li>
    List item 2
  </li>
  <li>
    List item 3
  </li>
  <li>
    List item 4
  </li>
</ol>
`;

exports[`DnList Tests should render with default props 1`] = `
<ul
  class="list"
>
  <li>
    List item 1
  </li>
  <li>
    List item 2
  </li>
  <li>
    List item 3
  </li>
  <li>
    List item 4
  </li>
</ul>
`;
